# leaderboards

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: build.yml
leaderboard_builder/: __main__.py  cmd.py  split_index.py  utils.py
leaderboard_builder/modeling/: __init__.py  _core.py  prosaudit.py
leaderboard_builder/templates/: base.leaderboad.html.jinja2  base.leaderboard.js.jinja2  preview.html.jinja2  readme.md.jinja2  zrc_prosaudit.html.jinja2
leaderboards/zrc_prosaudit/: index.json
leaderboards/zrc_prosaudit/0_GSLM/: README.md  entry.json
leaderboards/zrc_prosaudit/1_GSLM deduplicated/: README.md  entry.json
leaderboards/zrc_prosaudit/2_pGSLM continuous/: README.md  entry.json
leaderboards/zrc_prosaudit/3_pGSLM continuous + prosodic shift/: README.md  entry.json
leaderboards/zrc_prosaudit/4_pGSLM discrete/: README.md  entry.json
leaderboards/zrc_prosaudit/5_pGSLM discrete + prosodic shift/: README.md  entry.json
leaderboards/zrc_prosaudit/6_STELA/: README.md  entry.json
leaderboards/zrc_prosaudit/7_STELA dedup/: README.md  entry.json
static/css/: leaderboard.table.css
static/js/: zrc_prosaudit.js
static/preview/: zrc_prosaudit.html
static/snippets/: zrc_prosaudit.html
