[project]
name = "leaderboard-builder"
version = "0.1.0"
description = "A tool to manage leaderboards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clypi>=1.8.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.4",
    "rich>=14.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["leaderboard_builder"]

[tool.setuptools.package-data]
"*" = ["leaderboard_templates/*.jinja2", "leaderboard_templates/**/*.jinja2"]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
]
